smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-after-traitdef.smithy
// Syntax error at line 7, column 1: Unknown shape type: use | Model
namespace smithy.example

@trait
structure foo {}

use smithy.api#String
